[gd_scene load_steps=2 format=3 uid="uid://ehtxuh4m21cs"]

[ext_resource type="Script" path="res://scripts/game_start.gd" id="1_xyvi8"]

[node name="GameStart" type="Node2D"]
script = ExtResource("1_xyvi8")

[node name="level_loader" type="Node2D" parent="."]

[node name="transition" type="Node2D" parent="."]

[node name="bottom_shutter" type="MeshInstance2D" parent="transition"]

[node name="left_shutter" type="MeshInstance2D" parent="transition"]

[node name="right_shutter" type="MeshInstance2D" parent="transition"]

[node name="top_shutter" type="MeshInstance2D" parent="transition"]
